--- a/index.html
+++ b/index.html
@@ -1,183 +1,171 @@
 <!DOCTYPE html>
-<html lang="id">
-  <meta charset="UTF-8" /><meta
-    content="width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5"
-    name="viewport"
-  /><meta content="IE=edge" http-equiv="X-UA-Compatible" />
-
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
-    rel="stylesheet"
-  />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Sono:wght@600&display=swap"
-    rel="stylesheet"
-  />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap"
-    rel="stylesheet"
-  />
-
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script>
-  <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script>
-  <link rel="stylesheet" href="css/style.css" />
-  <script
-    src="https://kit.fontawesome.com/4f3ce16e3e.js"
-    crossorigin="anonymous"
-  ></script>
-
+<html lang="en">
   <head>
-    <title>Maaf Aku Suka Bikin Kamu Kesel</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+    <title>Happy Birthday!!!</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="icon"
-      type="image/x-icon"
-      href="https://malasid.github.io/favicon.png"
+      href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+      rel="stylesheet"
     />
-    <meta name="description" content="HTML Bucin Malas.id" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/all.min.css"
+      integrity="sha256-CTSx/A06dm1B063156EVh15m6Y67pAjZZaQc89LLSrU="
+      crossorigin="anonymous"
+    />
+
+    <!-- My Style -->
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!-- Ganti Audio di sini -->
-    <audio
-      src="https://feeldreams.github.io/audio/seandainya.mp3"
-      id="linkmp3"
-      class="sembunyi"
-    ></audio>
+    <audio class="song" loop autoplay>
+      <source src="./lagu/lagu.mp3" />
+      Your browser isn't invited for super fun audio time.
+    </audio>
 
-    <div id="bodyblur">
-      <!-- Wallpaper --><img
-        src="https://feeldreams.github.io/papjalan2.jpeg"
-        id="wallpaper"
-      />
-    </div>
-
-    <div id="Content">
-      <div id="ftAwal">
-        <!-- Stiker Pembuka -->
-        <img src="https://feeldreams.github.io/pandaputih.gif" id="ftoAwal" />
+    <div class="container">
+      <div class="one">
+        <h1 class="one">
+          Hai
+          <span id="name">Siska</span>
+        </h1>
+        <p class="two" id="greetingText">Aku sangat suka dengan namamu!</p>
       </div>
 
-      <div id="loveIn">
-        <!-- Tombol LOVE --><label class="lovein">&#10084;</label>
-      </div>
-      <p id="ket">Sentuh LOVEnya!</p>
-
-      <div class="kumpulanstiker">
-        <!-- Stiker untuk Konten -->
-        <img src="https://feeldreams.github.io/bwa2.gif" id="fotostiker" />
-        <img src="https://feeldreams.github.io/wortel.gif" id="fotostiker1" />
-        <img src="https://feeldreams.github.io/ngumpet.gif" id="fotostiker2" />
-        <img src="https://feeldreams.github.io/pusn.gif" id="fotostiker3" />
+      <div class="three">
+        <p>Hari ini adalah ulang tahunmu!! :D</p>
       </div>
 
-      <div class="kumpulanwp" class="sembunyi">
-        <img src="https://feeldreams.github.io/papjalan.jpeg" id="wallpaper2" />
-        <img
-          src="https://feeldreams.github.io/papjalan3.jpeg"
-          id="wallpaper3"
-        />
-        <img
-          src="https://feeldreams.github.io/paplalulintas4.jpeg"
-          id="wallpaper4"
-        />
-      </div>
-
-      <div>
-        <div id="pergeseran">
-          <p>
-            <b>
-              <span>hii ayaangggg</span>
-            </b>
+      <div class="four">
+        <div class="text-box">
+          <p class="hbd-chatbox" style="font-style: italic">
+            Selamat ulang tahun, sayang! Setiap detik bersamamu adalah
+            petualangan yang tak terlupakan. Semoga tahun ini membawa lebih
+            banyak momen manis dan kebersamaan.
           </p>
-
-          <p>
-            <b>
-              <span>maaf yaa kalo aku<br />suka bkin kamu kesel</span>
-            </b>
-          </p>
-
-          <p>
-            <b>
-              <span>aku cuma mau bilang</span>
-            </b>
-          </p>
-
-          <p>
-            <b>
-              <span>pncet ini dlu ya 👉💌</span>
-            </b>
-          </p>
+          <p class="fake-btn"><i class="fas fa-paper-plane"></i> Send</p>
         </div>
       </div>
 
-      <p id="ketgeser">Klik untuk Geser!</p>
+      <div class="five">
+        <p class="idea-1">Itulah yang sebenarnya ingin saya lakukan.</p>
+        <p class="idea-2">Tapi kemudian aku berhenti.</p>
+        <p class="idea-3">
+          Aku menyadari, aku ingin melakukan sesuatu<br />
+          <strong>spesial</strong>
+          .
+        </p>
+        <p class="idea-4">Karena,</p>
+        <p class="idea-5">
+          Kamu istimewa
+          <span>:)</span>
+        </p>
+        <p class="idea-6">
+          <span>S</span>
+          <span>O</span>
+        </p>
+      </div>
 
-      <div>
-        <blockquote id="bq">
-          <p id="kalimat">
-            Maaf ya aku belum bisa jadi yang terbaik buat kamu,<br /><br />aku
-            juga gabisa sepenuhnya ngertiin gimana cara kamu ingin dicintai,<br /><br />aku
-            terlalu banyak kurangnya buat cewe secantik kamu,<br /><br />tapi
-            aku akan terus berusaha yang terbaik buat kamu hehe..<br /><br />
-            Stay with me, even in the storms that shake our hearts and the
-            uncertainties that cloud our minds. Together, we'll find our way
-            through the maze of life's challenges, holding each other's hands,
-            and painting our tomorrows with the colors of hope and resilience. I
-            cherish every moment spent by your side, and I promise to keep
-            striving to become the person you deserve. Your love is my guiding
-            light, illuminating even the darkest corners of my soul. I love uu
-            beyond words, beyond measure, beyond eternity. 🤍
-          </p>
-          <p id="pesanAkhir">stay with me. i love uu 🤍</p>
-        </blockquote>
+      <div class="six">
+        <img
+          src="./images/photo.jpeg"
+          alt="profile"
+          class="profile-picture"
+          id="imagePath"
+        />
+        <img src="img/hat.svg" alt="hat" class="hat" />
+        <div class="wish">
+          <h3 class="wish-hbd">Selamat Ulang Tahun!</h3>
+          <h5 id="wishText">Semoga Alloh ta'ala selalu menyertaimu! ;)</h5>
+        </div>
+      </div>
+
+      <div class="seven">
+        <div class="baloons">
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+        </div>
+      </div>
+
+      <div class="eight">
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20" />
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20" />
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20" />
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20" />
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20" />
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20" />
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20" />
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20" />
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20" />
+        </svg>
+      </div>
+
+      <div class="nine">
+        <p>Oke, sekarang kembali dan beritahu aku apakah kamu menyukainya.</p>
+        <p id="replay">Atau klik, jika kamu ingin menontonnya lagi.</p>
+        <p class="last-smile">:)</p>
       </div>
     </div>
 
-    <script>
-      const body = document.querySelector("body");
-      const iniwp = [];
-      iden = 1;
-      iniwp[1] = wallpaper.src;
-      iniwp[2] = wallpaper2.src;
-      iniwp[3] = wallpaper3.src;
-      iniwp[4] = wallpaper4.src;
-      katakata = kalimat.innerHTML;
-      pesanAkhir2 = pesanAkhir.innerHTML;
-      kalimat.innerHTML = "";
-      pesanAkhir.innerHTML = "";
-      const swalst = Swal.mixin({
-        timer: 2500,
-        allowOutsideClick: false,
-        showConfirmButton: false,
-        timerProgressBar: true,
-        imageHeight: 90,
-      });
-      audio = new Audio("" + linkmp3.src);
-      ftganti = 0;
-      fungsi = 0;
-      fungsiAwal = 0;
-      deffotostiker = fotostiker.src;
-      function berjatuhan() {
-        const heart = document.createElement("div");
-        heart.className = "fas fa-heart";
-        heart.style.left = Math.random() * 90 + "vw";
-        heart.style.animationDuration = Math.random() * 3 + 2 + "s";
-        body.appendChild(heart);
-      }
-      setInterval(function name(params) {
-        var heartArr = document.querySelectorAll(".fa-heart");
-        if (heartArr.length > 100) {
-          heartArr[0].remove();
-        }
-      }, 100);
-      Content.style = "opacity:1;margin-top:14vh";
-      const swals = Swal.mixin({
-        allowOutsideClick: false,
-        cancelButtonColor: "#FF0040",
-        imageHeight: 80,
-      });
-    </script>
-    <script src="https://malasid.github.io/html/bikinkesal.js"></script>
+    <!-- Greensock -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <!-- Sweetalert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="application/javascript" src="./js/scrips.js"></script>
   </body>
 </html>
