--- a/index.html
+++ b/index.html
@@ -34,37 +34,45 @@
       <div class="one">
         <h1 class="one">
           Hai
-          <span id="name">Siska</span>
+          <span id="name">Rani</span>
         </h1>
-        <p class="two" id="greetingText">Aku sangat suka dengan namamu!</p>
+        <p class="two" id="greetingText">
+          Orang bilang nama kamu seperti Bidadari Curug!
+        </p>
       </div>
 
       <div class="three">
-        <p>Hari ini adalah ulang tahunmu!! :D</p>
+        <p>Cieee yang hari ini Ulang Tahun!! :D</p>
       </div>
 
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox" style="font-style: italic">
-            Selamat ulang tahun, sayang! Setiap detik bersamamu adalah
-            petualangan yang tak terlupakan. Semoga tahun ini membawa lebih
-            banyak momen manis dan kebersamaan.
+            Selamat ulang tahun, Ran! Semoga di hari ulang tahunmu ini, kamu
+            diberikan kemudahan dalam menjalankan niat-niat baik, selalu sehat,
+            dan apa yang kamu impikan segera tercapai!
           </p>
           <p class="fake-btn"><i class="fas fa-paper-plane"></i> Send</p>
         </div>
       </div>
 
       <div class="five">
-        <p class="idea-1">Itulah yang sebenarnya ingin saya lakukan.</p>
-        <p class="idea-2">Tapi kemudian aku berhenti.</p>
+        <p class="idea-1">
+          Ingat ye, jangan terlalu banyak mikir, dan jangan gamon terus sama
+          cowok yang cuma 6 bulan. HAHAHA!
+        </p>
+        <p class="idea-2">
+          Kalau pas ngajar jangan galak galak bangat ye, entar tuh anak anak
+          malah jadi takut sama lu Ran HAHAHA
+        </p>
         <p class="idea-3">
-          Aku menyadari, aku ingin melakukan sesuatu<br />
-          <strong>spesial</strong>
+          Bu Guru Rani Jaya Jaya Jaya<br />
+          <strong>WKWKWKW</strong>
           .
         </p>
-        <p class="idea-4">Karena,</p>
+        <p class="idea-4">Maunya biar bisa dekat sama lo lagi,</p>
         <p class="idea-5">
-          Kamu istimewa
+          tapi gue mikir, apa iya gue masi diberikan kesempatan?
           <span>:)</span>
         </p>
         <p class="idea-6">
@@ -75,14 +83,20 @@
 
       <div class="six">
         <img
-          src="./images/photo.jpeg"
+          src="./images/photo-1.jpg"
+          alt="profile"
+          class="profile-picture"
+          id="imagePath"
+        />
+        <img
+          src="./images/photo-2.jpg"
           alt="profile"
           class="profile-picture"
           id="imagePath"
         />
         <img src="img/hat.svg" alt="hat" class="hat" />
         <div class="wish">
-          <h3 class="wish-hbd">Selamat Ulang Tahun!</h3>
+          <h3 class="wish-hbd">Mabruk Alfa Mabruk</h3>
           <h5 id="wishText">Semoga Alloh ta'ala selalu menyertaimu! ;)</h5>
         </div>
       </div>
@@ -156,8 +170,8 @@
       </div>
 
       <div class="nine">
-        <p>Oke, sekarang kembali dan beritahu aku apakah kamu menyukainya.</p>
-        <p id="replay">Atau klik, jika kamu ingin menontonnya lagi.</p>
+        <p>Kalau kepanjangan jangan di klik lagi ye,</p>
+        <p id="replay">tapi terserah lu si mau replay ulang atau engga!.</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
